# rasterry

./: .gitmodules  CMakeLists.txt
ext/: CMakeLists.txt
include/: CMakeLists.txt  camera.hpp  clip.hpp  color.hpp  frameBuffer.hpp  line.hpp  loader.hpp  material.hpp  mesh.hpp  model.hpp  texture.hpp  timer.hpp  world.hpp
res/the_noble_craftsman/: LICENCE
src/: CMakeLists.txt  camera.cpp  clip.cpp  frameBuffer.cpp  line.cpp  loader.cpp  main.cpp  texture.cpp  timer.cpp
